# svo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scraper.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  e2e_playwright.yml  nightly.yml
docs/: README.txt  bot_setup.txt  cicd_guide.md  coding_guidelines.md  configuration.md  mysql_integration_plan.txt  start.md  style_guide.md  testing_guide.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_change_summaries.py
scripts/: backfill_layers.py  db_upgrade.py  full_dump_page.py  generate_period_report_db.py  generate_report_db.py  persist_latest.py  run_bot.py  run_daily_report.py  suggest_whitelist.py
src/bot/: __init__.py  app.py  storage.py
src/core/: config.py
src/data_io/: __init__.py  history_fetcher.py  history_index.py  scraper.py
src/db/: __init__.py  base.py  dao.py  models.py
src/domain/: __init__.py  geo_changes.py  nearest.py  period.py  persist.py  pipeline.py  utils_dates.py
src/pipeline/: __init__.py  daily.py
src/reporting/: __init__.py  period_report.py  report_generator.py
tests/: conftest.py  test_backfill_layers_db.py  test_compare_dates.py  test_compare_dates_db.py  test_config.py  test_domain.py  test_geo_changes.py  test_geo_changes_clustering.py  test_geo_changes_quality.py  test_history_fetcher.py  test_history_index.py  test_period_report_db.py  test_pipeline.py  test_reporting.py  test_reporting_build.py  test_reporting_grouping.py
