[project]
name = "deepstate-reports"
version = "0.1.0"
description = "Scraper, geospatial diff, and Telegram reporting pipeline"
requires-python = ">=3.10"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
exclude = [
  "^/.venv/",
  "^/.mypy_cache/",
  "^/.ruff_cache/",
  "^/.git/",
  "^/data/",
]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
known_first_party = ["src"]
skip = [".venv", "data", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "C90", # mccabe complexity
]
ignore = [
  "E203",  # whitespace before ':' (conflict with black)
]
exclude = [".venv", "data", "build", "dist"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
ignore_missing_imports = true
exclude = [
  ".venv",
  "tests/fixtures",
  "data",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
filterwarnings = [
  "error", # treat warnings as errors in CI; locally you can override
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "src/bot/app.py",  # optional integration
]

[tool.coverage.report]
show_missing = true
skip_covered = true
